# rust-cat

./: .gitignore  CHANGELOG.md  Cargo.toml  FOLLOWUPS.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
benches/: cat.rs
examples/: asymmetric_signing.rs  basic_usage.rs  cat_specific_claims.rs  cat_validation.rs  extended_cat_claims.rs  sample_es256_ps256_tokens.rs
scripts/: bench_report.py  run_benchmarks.sh
src/: cat_claims.rs  claims.rs  constants.rs  error.rs  header.rs  lib.rs  tests.rs  token.rs  utils.rs
