[package]
name = "common-access-token"
version = "0.3.0"
edition = "2021"
description = "Implementation of the Common Access Token (CAT) specification"
authors = ["Fastly Inc."]
license = "MIT"
documentation = "https://docs.rs/common-access-token"
homepage = "https://github.com/fastly/rust-cat"
repository = "https://github.com/fastly/rust-cat"
readme = "README.md"
keywords = ["token", "authentication", "authorization", "cbor", "cose"]
categories = ["authentication", "cryptography", "web-programming"]
rust-version = "1.88.0"

[dependencies]
minicbor = { version = "2.1.3", features = ["derive", "std"] }
hmac-sha256 = "1.1.12"
hmac-sha512 = "1.1.7"
thiserror = "2"
ct-codecs = "1.1.6"
url = "2.5.2"
regex = "1.9.6"
# ES256 (ECDSA P-256 + SHA-256, COSE alg -7)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
# PS256 (RSASSA-PSS + SHA-256, COSE alg -37)
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
# RNG for PSS salt generation (WASM-friendly via getrandom)
rand_core = { version = "0.6", features = ["getrandom"] }
